--- a/playground.html
+++ b/playground.html
@@ -6,7 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="playground.js"></script>
+    <h2>人々: </h2>
+    <p id="demo"></p>
+
     
+    <script src="playground.js"></script>
+   
 </body>
 </html>
